[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yamlwav"
version = "0.1.0"
description = "YAML config files encoded as playable WAV audio. No external dependencies."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
