[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yamlwav"
version = "0.1.0"
description = "YAML config files encoded as playable WAV audio. No external dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Sarcasm Heavy Industries LLC"},
]
keywords = ["yaml", "wav", "audio", "config", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CryptoFewka/yamlwav"
Repository = "https://github.com/CryptoFewka/yamlwav"
Issues = "https://github.com/CryptoFewka/yamlwav/issues"

[project.scripts]
yamlwav = "yamlwav.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "ruamel.yaml", "pyyaml"]
